| Bug #27087 | Unoptimal handling of failed API in SUMA | ||
|---|---|---|---|
| Submitted: | 13 Mar 2007 14:34 | Modified: | 27 Mar 2007 14:33 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.0-wl2325-5.0, 5.1* | OS: | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[13 Mar 2007 14:34]
Jonas Oreland
[13 Mar 2007 14:35]
Jonas Oreland
Fix
Attachment: pp0.patch (text/x-patch), 1.08 KiB.
[14 Mar 2007 10:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21864 ChangeSet@1.2433, 2007-03-14 11:22:11+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#27087 Make sure not to handle API_FAILREQ if it's already handled
[14 Mar 2007 17:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21923 ChangeSet@1.2118, 2007-03-14 14:53:53+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#27087 (wl2325-5.0) Make not to handle same API_FAILREQ several times
[20 Mar 2007 15:54]
Jonas Oreland
pushed to wl2325-5.0, 5.1-ndb telco-6.1, 51-telco
[23 Mar 2007 7:59]
Jon Stephens
Documented fix in 5.1.17 and telco-6.1.6 changelogs. Set back to Patch Pending for 5.0 version.
[27 Mar 2007 14:33]
Jonas Oreland
it's a wont fix in 5.0 and drop5 is already documented. closing this ?
