ndb - bug#27087   Make sure not to handle API_FAILREQ if it's already handled

storage/ndb/src/kernel/blocks/suma/Suma.cpp:
  Make sure not to handle API_FAILREQ if it's already handled